<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large">
        <TextView
            android:id="@+id/tv_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_new_product"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_image"
            android:layout_width="0dp"
            android:layout_height="@dimen/product_image_height_large"
            android:layout_marginTop="@dimen/margin_large"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation_medium"
            app:strokeWidth="2dp"
            app:strokeColor="@color/greyName"
            app:layout_constraintTop_toBottomOf="@id/tv_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F5F5F5">

                <ImageView
                    android:id="@+id/iv_product_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    android:contentDescription="Product Image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:id="@+id/iv_add_placeholder"
                    android:layout_width="@dimen/icon_size_xlarge"
                    android:layout_height="@dimen/icon_size_xlarge"
                    android:src="@android:drawable/ic_input_add"
                    android:contentDescription="@string/add_image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="@color/greyName" />

                <TextView
                    android:id="@+id/tv_add_image_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_to_add_image"
                    android:textColor="@color/greyName"
                    android:textSize="@dimen/font_size_body"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:layout_constraintTop_toBottomOf="@id/iv_add_placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_image_required"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_card_to_add_image"
            android:textColor="@color/greyName"
            android:textSize="@dimen/font_size_small"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/card_image"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/product_name_hint"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tv_image_required"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/brand_hint"
            app:layout_constraintTop_toBottomOf="@id/til_product_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_price_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/price_information"
            android:textSize="@dimen/font_size_subtitle"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/til_brand"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_sale_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/sale_price_hint"
            app:prefixText="@string/price_prefix"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tv_price_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sale_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_list_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/original_price_hint"
            app:prefixText="@string/price_prefix"
            app:helperText="@string/leave_empty_if_no_discount"
            app:layout_constraintTop_toBottomOf="@id/til_sale_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_list_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_discount_perecnt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/discount_hint"
            app:helperText="@string/discount_percent_helper"
            app:layout_constraintTop_toBottomOf="@id/til_list_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_discount_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                 />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/location_hint"
            app:layout_constraintTop_toBottomOf="@id/til_discount_perecnt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_store_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/store_information"
            android:textSize="@dimen/font_size_subtitle"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/til_location"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/cb_official_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/official_store"
            app:layout_constraintTop_toBottomOf="@id/tv_store_section"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/cb_diamond_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diamond_store"
            app:layout_constraintTop_toTopOf="@id/cb_official_store"
            app:layout_constraintStart_toEndOf="@id/cb_official_store"
            android:layout_marginStart="@dimen/margin_large" />

        <TextView
            android:id="@+id/tv_tags_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/product_tags"
            android:textSize="@dimen/font_size_subtitle"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cb_official_store"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/cb_free_shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/free_shipping"
            app:layout_constraintTop_toBottomOf="@id/tv_tags_section"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/cb_free_gift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_gift"
            app:layout_constraintTop_toTopOf="@id/cb_free_shipping"
            app:layout_constraintStart_toEndOf="@id/cb_free_shipping"
            android:layout_marginStart="@dimen/margin_large" />

        <CheckBox
            android:id="@+id/cb_flash_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/flash_sale"
            app:layout_constraintTop_toBottomOf="@id/cb_free_shipping"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/cancel"
            android:textColor="@color/blibliBlue"
            app:backgroundTint="@android:color/white"
            app:strokeColor="@color/blibliBlue"
            app:strokeWidth="1dp"
            app:cornerRadius="@dimen/card_corner_radius"
            app:layout_constraintTop_toBottomOf="@id/cb_flash_sale"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin_large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/save_product"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/blibliBlue"
            app:cornerRadius="@dimen/card_corner_radius"
            app:layout_constraintTop_toTopOf="@id/btn_cancel"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btn_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
