<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/bgImage"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="@dimen/zero_dimen"
            android:scaleType="fitStart"
            android:src="@drawable/bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:layout_width="@dimen/med_dimen"
            android:layout_height="wrap_content"
            android:src="@drawable/blibli"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"
            android:id="@+id/guideline"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_shape"
            android:elevation="@dimen/elevation_text"
            app:layout_constraintBottom_toBottomOf="@+id/bgImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            >

            <EditText
                android:id="@+id/userfield"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="@dimen/edittext_top"
                android:background="@drawable/inputfield"
                android:hint="@string/login_hint"
                android:inputType="text"
                android:padding="@dimen/edittext_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:enabled="true"
                android:importantForAutofill="yes"
                android:autofillHints="username"
                />
            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/inputfield"
                android:layout_marginVertical="@dimen/five_dp"
                android:hint="password"
                android:inputType="textPassword"
                android:padding="@dimen/edittext_padding"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/userfield"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="@dimen/layout_spacing"
                android:backgroundTint="@color/blibliBlue"
                android:padding="@dimen/edittext_padding"
                android:text="@string/login_text"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/layout_spacing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_field" />

            <TextView
                android:id="@+id/loginwith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginBottom="@dimen/very_low_dimen"
                android:text="@string/login_others"
                android:textColor="@color/greyName"
                android:textSize="@dimen/edittext_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginbutton" />


            <ImageView
                android:id="@+id/applelogo"
                android:layout_width="43dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:clickable="true"
                android:src="@drawable/apple"
                app:layout_constraintEnd_toStartOf="@id/facebooklogo"
                app:layout_constraintStart_toStartOf="@+id/loginwith"
                app:layout_constraintTop_toBottomOf="@+id/loginwith" />


            <ImageView
                android:id="@+id/facebooklogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:clickable="true"
                android:src="@drawable/facebook"
                app:layout_constraintEnd_toStartOf="@id/googlelogo"
                app:layout_constraintStart_toEndOf="@id/applelogo"
                app:layout_constraintTop_toBottomOf="@+id/loginwith" />

            <ImageView
                android:id="@+id/googlelogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:clickable="true"
                android:src="@drawable/google"
                app:layout_constraintEnd_toEndOf="@+id/loginwith"
                app:layout_constraintStart_toEndOf="@id/facebooklogo"
                app:layout_constraintTop_toBottomOf="@+id/loginwith" />

            <TextView
                android:id="@+id/signuptext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="15dp"
                android:text="Belum punya akun?"
                app:layout_constraintLeft_toLeftOf="@id/signuplink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/googlelogo" />

            <TextView
                android:id="@+id/signuplink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="128dp"
                android:text="Daftar,yuk!"
                android:textColor="@color/blibliBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/signuptext"
                app:layout_constraintTop_toBottomOf="@+id/googlelogo"
                android:clickable="true"
                />

            <TextView
                android:id="@+id/tnc"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="   Dengan log in, kamu menyetujui Kebijakan Privasi dan Syarat and Ketentuan Blibli Tiket"
                android:textAlignment="center"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signuplink" />

            <ImageView
                android:id="@+id/tiket"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/tiket"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tnc" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>